[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
solana-sdk = "1.17"
solana-program = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.3"
bs58 = "0.5"
base64 = "0.21"
ed25519-dalek = { version = "1.0", features = ["rand"] }
rand = "0.8"
anyhow = "1.0"